# rtmp-forwarder

./: Cargo.toml  LICENSE  README.md  README.zh-CN.md
.github/workflows/: release.yml
src/: amf.rs  basic_auth.rs  config.rs  error.rs  flv_manager.rs  forwarder.rs  forwarder_manager.rs  handshake.rs  main.rs  rtmp.rs  rtmp_codec.rs  server.rs  stream_manager.rs  util.rs  web.rs
src/forwarder/: manager.rs  mod.rs
src/rtmp/: amf.rs  codec.rs  handshake.rs  mod.rs
src/stream/: detect.rs  flv.rs  hls.rs  mod.rs
src/web/: mod.rs
static/: index.html  preview.html  simple_test.html
