[package]
name = "rtmp-forwarder"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["fs", "cors"] }
rust-embed = "8.11"
tokio-stream = { version = "*", features = ["sync"] }
tokio-util = { version = "0.7", features = ["codec", "io-util"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.31", features = ["socket", "net"] }
